lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_collapses_redundant_copy_before_return.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&optimized)
snapshot_kind: text
---
tac:
main:
  return value

cfg:
function 0..0
