lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_eliminates_dead_temporaries_without_dropping_calls.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&optimized)
snapshot_kind: text
---
tac:
add_one:
  fn add_one
  $t1 = value + 1
  return $t1
  endfn add_one

main:
  fn main
  value = 4
  param 4
  $t2 = call add_one
  return value
  endfn main

cfg:
function 0..0
function 1..1
