lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_folds_constant_expressions.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&optimized)
snapshot_kind: text
---
tac:
main:
  fn main
  $t1 = 3
  sum = $t1
  $t2 = 5
  difference = $t2
  $t3 = 12
  product = $t3
  $t4 = 4
  quotient = $t4
  $t5 = 1
  remainder = $t5
  $t6 = true
  comparison = $t6
  $t7 = false
  logical = $t7
  $t8 = true
  inverted = $t8
  return sum
  endfn main

cfg:
function 0..0
