lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_keeps_branch_facts_across_calls_conservative.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&optimized)
snapshot_kind: text
---
tac:
main:
  flag = true
  call touch
  if false == flag then goto else

then:
  return 1

else:
  return 2

cfg:
function 0..2

0(main) -> 1(then)
0(main) -> 2(else)
