lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_noop_preserves_tac_and_cfg.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&noop)
snapshot_kind: text
---
tac:
add_one:
  fn add_one
  $t1 = value + 1
  return $t1
  endfn add_one

main:
  fn main
  total = 0
  i = 0

$lstart_1:
  $t1 = i < 3
  if false == $t1 then goto $lend_1
  param i
  $t2 = call add_one
  $t3 = total + $t2
  total = $t3
  $t4 = i + 1
  i = $t4
  goto $lstart_1

$lend_1:
  selected = 0
  $t5 = total > 3
  if false == $t5 then goto $celse_1

$cthen_1:
  selected = total
  goto $cend_1

$celse_1:
  selected = 0

$cend_1:
  return selected
  endfn main

cfg:
function 0..0
function 1..6

1(main) -> 2($lstart_1)
2($lstart_1) -> 2($lstart_1)
2($lstart_1) -> 3($lend_1)
3($lend_1) -> 4($cthen_1)
3($lend_1) -> 5($celse_1)
4($cthen_1) -> 6($cend_1)
5($celse_1) -> 6($cend_1)
