lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_preserves_dead_trapping_temporaries.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&optimized)
snapshot_kind: text
---
tac:
main:
  fn main
  $t1 = input / 0
  return input
  endfn main

cfg:
function 0..0
