lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_propagates_values_and_simplifies_algebra.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&optimized)
snapshot_kind: text
---
tac:
main:
  a = 2
  b = 2
  c = 2
  d = 2
  e = 0
  return 0

cfg:
function 0..0
