lexion_lang/tests/snapshots/tac_optimizer__tac_optimizer_simplifies_jump_chains.snap
---
source: lexion_lang/tests/tac_optimizer.rs
expression: optimized_snapshot(&optimized)
snapshot_kind: text
---
tac:
main:
  return 0

cfg:
function 0..0
